Fix icon in open category on mobile

--- a/web/links.scss
+++ b/web/links.scss
@@ -397,7 +397,7 @@
                             vertical-align: -20pt;
                             opacity: 0.4;
                             margin-right: -48pt;
-                            margin-left: -32pt;
+                            margin-left: 0pt;
                             color: $primary;
 
                             @media (min-width: $breakpoint) {
